--- a/styles.css
+++ b/styles.css
@@ -158,37 +158,8 @@ body {
 
 /* Header */
 
-.github-link {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
-  z-index: 1000;
-}
-
-.github-link .bg {
-  fill: #fff;
-  fill-opacity: 0.2;
-}
-
-.github-link:hover .bg {
-  fill-opacity: 0.3;
-}
-
-.github-link .icon {
-  fill: #fff;
-  fill-opacity: 0.6;
-}
-
-.github-link:hover .icon {
-  fill-opacity: 0.7;
-}
-
 header {
-  border-bottom: solid 1px rgba(0,0,0,0.4);
-  background-color: #183D4E;
+  background-color: #2E86DE;
   color: white;
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
@@ -196,10 +167,10 @@ header {
 }
 
 header h1 {
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -215,16 +186,16 @@ header h1 .optional {
 
 @media (min-height: 700px) {
   header h1 {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
 @media (min-height: 800px) {
   header h1 {
-    font-size: 34px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    font-size: 14px;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -416,25 +387,6 @@ header h1 .optional {
   margin: 0;
   color: #777;
   font-size: 13px;
-}
-
-.more {
-  position: absolute;
-  left: 50%;
-}
-
-.more button {
-  position: absolute;
-  left: -28px;
-  top: -28px;
-  background: white;
-}
-
-.more button:hover,
-.more button:active,
-.more button:focus,
-.more button:focus:not(:active) {
-  background: white;
 }
 
 svg text {
